# fast-api-alembic-initializr

./: Dockerfile  README.MD  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: eee836d98537_create_item_table.py
api/items/: crud.py  routers.py  schemas.py
core/: config.py  env.py  routers.py
db/: config.py
db/models/: __init__.py  item.py
